style/site_bugzilla.css
/* ... */
	#status_resolution option {
                background-color: #fff;
                color: #000;
        }

/* Bug severities */
.severity-critical select#bug_severity,
.severity-blocker select#bug_severity {
	background-color: rgba( 210, 0, 0, 1 );
	color: #fff;
}
	.severity-critical select#bug_severity:hover,
	.severity-blocker select#bug_severity:hover {
		background-color: rgba( 230, 20, 20, 1 );
	}

	.severity select#bug_severity option {
		background-color: #fff;
		color: #000;
	}

.bz_bugitem {
	color: inherit;
	font-weight: normal;
}
	.bz_blocker,
	.bz_critical {
		color: rgba( 210, 0, 0, 1 );
	}
	.bz_critical .bz_short_desc_column,
	.bz_blocker .bz_short_desc_column {
		padding-left: 2em;
	}
		.bz_critical .bz_short_desc_column:before,
		.bz_blocker .bz_short_desc_column:before {
			position: absolute;
			content: "!";
			left: 0.4em;
			top: 0.4em;
			padding: 0.15em 0.4em;
			border-radius: 0.2em;
			background-color: rgba( 210, 0, 0, 1 );
			color: #fff;
			font-weight: bold;
		}

	.bz_CLOSED .bz_short_desc_column:before,
	.bz_RESOLVED .bz_short_desc_column:before,
	.bz_VERIFIED .bz_short_desc_column:before {
		display: none;
	}
	.bz_CLOSED .bz_short_desc_column,
	.bz_RESOLVED .bz_short_desc_column,
	.bz_VERIFIED .bz_short_desc_column {
		padding-left: 0.4em;
	}

/*
 *  BUG VIEW
 *
 */

#bug-header {
	display: flex;
	padding: 0 0 0.4em 0;
	font-weight: normal;    

	border-bottom: 1px solid rgba( 0, 0, 0, 0.4 );
	border-bottom: 1px solid #06c;
}
	#bug-header #bug-primary-actions { flex: 2; text-align: right; min-width: 200px; }
		#bug-header #bug-primary-actions .action-link {
			font-size: 105%;
			padding: 0.3em 1em;
		}
#bug-title { font-size: 180%; flex: 8; padding-bottom: 0.2em; line-height: 1.1em; }
	#bug-title a { color: #000; }
	#bug-title input { display: block; font-size: 80%; margin-top: -0.15em; font-weight: normal; }

/* Main layout
 */

#bug-layout {
	display: flex;
}
	#bug-main { flex: 70; }
	#bug-sidebar { flex: 30; margin-left: 3em; min-width: 310px; }
		#bug-sidebar .field,
		#bug-sidebar .sidebar-item { margin-bottom: 1em; }
		#bug-sidebar #sidebar-expand .field,
		#bug-sidebar #sidebar-expand .sidebar-item { display: none; }
		#bug-sidebar #sidebar-expand.expanded .field,
		#bug-sidebar #sidebar-expand.expanded .sidebar-item { display: block; }

	#bug-layout h3 { font-weight: normal; font-size: 130%; border-bottom: 1px solid rgba( 0, 0, 0, 0.3 ); padding-bottom: 0.3em; color: rgba( 0, 0, 0, 0.7 ); margin-top: 2em; }
		#bug-layout h3:first-child { margin-top: 0.5em; }

/*  Rows that need to be split
 */

#changeform .flex-split { display: flex; }
#changeform .flex-split * { flex: 1; margin: 0 0.1em; }
	#changeform .flex-split a.action-link { padding: 0.5em; text-align: center; }

/*  Product and component box
 */

#changeform .flex-item { flex: 2; }
#changeform .flex-product,
#changeform .flex-status { flex: 3; }
#changeform .flex-component { flex: 4; }

#changeform .flex-split span.select,
#changeform .flex-split select { flex: 2; }

/*  Comments
 */

/* Collapse and Expand links */
.bz_collapse_expand_comments {
	float: right;
	margin-top: -3.5em;
}
	.bz_collapse_expand_comments li {
		display: inline;
	}

/* Comments itself */
body #comments pre.bz_comment_text,
body #comments pre.bz_comment_text * {
	font-family: 'Noto Sans', sans-serif !important;
}
body #comments pre.bz_comment_text {
	word-break: break-all;
}

/*  SIDEBAR
 */

#bug-sidebar select {
	width: 100%;
	margin: 0.2em 0;
}

/* Duplicates
 */

.field-duplicates ul {
	list-style-type: none;
	margin: 0 0 1em 0;
	padding-left: 0;
}
/* CC List
 */

#cc_edit_area {
	margin-left: 2em;
}

/* Attachments
 */

#attachment_table {
	width: 100%;
	border: none;
	margin-top: 1em;
}

#attachment_table tr:nth-child(even) {
	background-color: rgba( 0, 0, 0, 0.08 );
}
#attachment_table tr:nth-child(odd) {
	background-color: rgba( 0, 0, 0, 0.04 );
}
#attachment_table th,
#attachment_table tr:last-child {
	background-color: transparent;
}

#attachment_table td {
	border: none;
}

#attachment_table .bz_attach_footer > td > a {
	display: block;
	clear: both;
	background: transparent url(https://bugzilla.xfce.org/skins/contrib/Xfce/add-attachment.png) no-repeat 0 0;
	padding-left: 20px;
}

/*
 *
 *
 */

/*  Bug comments  */
.bz_comment_table {
	width: 100% !important;
}
	.bz_comment {
		background-color: #f3f3f3;
		margin-bottom: 1em;
	}
		.bz_first_comment_head,
		.bz_comment_head {
			padding: 0.5em;
		}
		.bz_comment_user {
			font-weight: bold;
		}
		.bz_comment_text {
			width: 100%;
			padding: 0 1em 1em 1em;
		}
.comment_tab {
	display: inline-block;
	margin: 0.1em 0 0.4em 0;
	font-size: 90%;
}

#add_comment,
#add_comment table,
#add_comment #comment {
	width: 100%;
}
	#add_comment table,
	#add_comment table tr,
	#add_comment table td,
	#add_comment table th {
		border: none !important;
		padding: 0;
	}


/*  Commit buttons  */
#commit_top,
#commit {
	padding: 0.3em 1em;
	background-color: #06c;
	color: #fff;
}
	#commit_top:hover, #commit_top:active, #commit_top:focus,
	#commit:hover, #commit:active, #commit:focus {
		background-color: #00a8dd;
	}

/*
 *  Filing and editing bugs
 *
 */
.bug-row,
.filebug-row {
	margin-bottom: 1em;
	width: auto !important;
	vertical-align: top;
}
	/*  Bug row elements  */
	.filebug-row b.required::before {
		color: red;
		content: "* ";
	}
	.flex-item.expert_fields b::before,
	tbody.expert_fields th::before,
	#expert_fields_controller::before {
		color: rgba( 255, 180, 0, 1 );
		content: "^ ";
		font-weight: bold;
	}
	.bug-row textarea,
	.filebug-row textarea {
		width: 100%;
	}
	.bug-row input,
	.bug-row span {
		vertical-align: top;
	}
	/*  Specific element styles  */
	.bug-row #short_desc,
	.filebug-row #short_desc {
		font-size: 130%;
		font-weight: 500;
		padding: 0.5em;
	}
	.bug-row #status {
		margin-bottom: 0;
	}
	.bug-row .popup,
	.filebug-row .popup {
		padding: 1em;
		margin-top: 0.3em;
		background-color: #eee;
	}
/* ... */

